# smart-contract-hgnn

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  Hypergraph_Analysis.tex  PLAN.md  README.md  feature_config.json  main.tex  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
docs/: pipeline_walkthrough.md  weekly_meeting_2026-04-24.md
notebooks/: train_hgnn.ipynb
scripts/: preprocess_dataset.py
src/evaluation/: train.py
src/extraction/: ast_cfg.py  gdep.py  labels.py
src/hypergraph/: features.py  hyperedges.py  nodeset.py
src/model/: hgnn.py  losses.py
tests/: test_extraction.py  test_features.py  test_gdep.py  test_hgnn.py  test_hyperedges.py  test_labels.py  test_losses.py  test_nodeset.py  test_train.py
tests/fixtures/: no_calls.sol  withdraw.sol
